csmbios en la web infantil

--- a/Desktop/PROYECTOS/Ej_Repaso_html-css/index.html
+++ b/Desktop/PROYECTOS/Ej_Repaso_html-css/index.html
@@ -14,10 +14,6 @@
 <body>
     <div class="grid-container">
         <header>
-            <img src="assets/imagenes/elementos-pagina/header.png" alt="imagen de cabecera">
-            <h1>
-
-            </h1>
             <nav>
                 <ul>
                     <li><a href="pages/niña.html">Niña</a></li>
@@ -25,20 +21,35 @@
                     <li><a href="pages/unisex.html">Unisex</a></li>
                 </ul>
             </nav>
+            <section id="marca-cabecera">
+                <h1>
+                    Q-sha
+                </h1>
+                <img src="assets/imagenes/elementos-pagina/corona.png" alt="imagen de cabecera">
+            </section>
         </header>
         <main>
-            <section>
 
-                <article class="articulo1"><p>Little Girl</p></article>
-                <article class="articulo2"><p>Little Boy</p></article>
-                <article class="articulo3"><p>Unisex</p></article>
-                <article class="articulo3"><p>Sales</p></article>
+            <section id="principal">
+                <article class="articulo1">
+                    <p>Little Girl</p>
+                </article>
+                <article class="articulo2">
+                    <p>Little Boy</p>
+                </article>
+                <article class="articulo3">
+                    <p>Unisex</p>
+                </article>
+                <article class="articulo3">
+                    <p>Sales</p>
+                </article>
 
             </section>
 
         </main>
         <aside>
             <img src="assets/imagenes/publicidad/publicidad-amazon.png">
+            <img src="assets/imagenes/publicidad/niños.jpg">
         </aside>
         <footer>
             <img src="assets/imagenes/redes-sociales/fb.png">
